# RCSB_UTILS_CONFIG HISTORY

22-Aug-2018  - V0.10 Split off from py-rcsb_db
26-Aug-2018  - V0.11 Tweak testing configuration
 3-Oct-2018  - V0.12 Add YAML support, roundtrip translation, and injection
                     of environmental variables for ini/configparser format files.
10-Oct-2018  - V0.13 Added methods getConfigPath() adn getMockTopPath()
23-Oct-2018  - V0.14 Fix export method for configparser() style configuration files
26-Oct-2018  - V0.15 Improve default configuration format handling
 4-Jan-2019  - V0.16 Add optional arguments to getPath(...,prefixName=None, prefixSectionName=None)
                     Add methods getDefaultSectionName(), replaceSectionName(), and getSectionNameReplacement()
10-Mar-2019  - V0.17 Add getEnvValue() method to dereference an option as an environmental variable
21-Jun-2019  - V0.18 Change development workflow
11-Aug-2019  - V0.19 Add support for configuration secrets
12-Aug-2019  - V0.20 Revise naming API, update documentation and dependencies
13-Aug-2019  - V0.21 Recognize options with leading underscores as secrets.
20-Aug-2019  - V0.22 Add append config method, check for protocol scheme and leading / before preppending path details.
29-Aug-2019  - V0.23 Update dependency to fix py27 issue
30-Aug-2019  - V0.24 Make the default for yaml roundrip False
23-Nov-2019  - V0.25 Update pipeline to py38